# blockchain-db

./: .gitignore  BlockChain.h  CMakeLists.txt  CMakeLists.txt.user.69289ff  CMakeLists.txt.user.a956b44  MOCKDATA.csv  README.md  avl.h  block.h  blockchain.h  blockidinputbox.cpp  blockidinputbox.h  blockwidget.cpp  blockwidget.h  blockwidget.ui  circular_list.h  compacttrie.cpp  compacttrie.h  createblockform.cpp  createblockform.h  createblockform.ui  createindexform.cpp  createindexform.h  createindexform.ui  crypto.cpp  crypto.h  data100.csv  entry.h  entrywidget.cpp  entrywidget.h  entrywidget.ui  findentryform.cpp  findentryform.h  findentryform.ui  globals.h  hash.h  heap.h  index.h  list.h  main.cpp  (+16 more)
backend/: BlockChain.h  CMakeLists.txt  MOCKDATA.csv  block.h  entry.h  main  main.cpp
frontend/: CMakeLists.txt
frontend/assets/: app.html
frontend/src/: MyApp.cpp  main.cpp
images/: grafico1  grafico2  test1  test2  test3  test4
